force-app/main/default/objects/Province__c/Province__c.object-meta.xml
<CustomObject>
    <label>Province</label>
    <nameField>
        <label>Province Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provinces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>