force-app/main/default/objects/Province__c/fields/Ownership_Tax__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Tax__c</fullName>
    <label>Ownership Tax</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>