force-app/main/default/objects/Province__c/fields/ProviceMapping__c.field-meta.xml
<CustomField>
    <fullName>ProviceMapping__c</fullName>
    <label>ProviceMapping</label>
    <length>20</length>
    <type>Text</type>
</CustomField>