force-app/main/default/objects/Province__c/fields/Registration_Fee_KXKC__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fee_KXKC__c</fullName>
    <label>Registration Fee KXKC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>