force-app/main/default/objects/Province__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ownership_Tax__c</columns>
    <columns>Number_Plate_Fee__c</columns>
    <columns>Registration_Fee_CXCC__c</columns>
    <columns>Registration_Fee_KXKC__c</columns>
    <columns>Region__c</columns>
    <columns>ID_18__c</columns>
    <columns>ProviceMapping__c</columns>
    <columns>Province_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>